--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@fullcalendar/daygrid": "^6.1.11",
     "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/list": "^6.1.11",
-    "@fullcalendar/react": "^5.11.3",
+    "@fullcalendar/moment": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
